video: imx: dw-hdmi-detect: initial addition
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/drivers/video/imx/Makefile
+++ b/drivers/video/imx/Makefile
@@ -7,7 +7,7 @@ obj-$(CONFIG_VIDEO_IPUV3) += mxc_ipuv3_fb.o ipu_common.o ipu_disp.o
 obj-$(CONFIG_VIDEO_IMXDPUV1) += imxdpuv1.o imx8_dc.o
 obj-$(CONFIG_VIDEO_IMX8_LVDS) += imx8_lvds.o
 obj-$(CONFIG_VIDEO_IMX8MP_LVDS) += imx8mp-ldb.o fsl-imx-ldb.o
-obj-$(CONFIG_VIDEO_IMX8MP_HDMI) += dw_hdmi-imx.o
+obj-$(CONFIG_VIDEO_IMX8MP_HDMI) += dw_hdmi-imx.o dw-hdmi-detect.o
 obj-$(CONFIG_IMX8MP_HDMI_PAVI) += imx8mp-hdmi-pavi.o
 obj-$(CONFIG_VIDEO_DW_HDMI) += dw-hdmi.o
 obj-$(CONFIG_VIDEO_DW_HDMI_I2C) += dw-hdmi-i2c.o
