--- a/arch/arm/dts/imx8mp.dtsi
+++ b/arch/arm/dts/imx8mp.dtsi
@@ -22,6 +22,7 @@
 	aliases {
 		ethernet0 = &fec;
 		ethernet1 = &eqos;
+		hdmi_hpd = &hdmi_hpd;
 		i2c0 = &i2c1;
 		i2c1 = &i2c2;
 		i2c2 = &i2c3;
@@ -1258,6 +1259,13 @@
 			hdmi_i2c: hdmi-i2c@32fd8000 {
 				compatible = "fsl,imx8mp-hdmi-i2c";
 				reg = <0x32fd8000 0x7eff>;
+			};
+
+			hdmi_hpd: hdmi-hpd@32fdb000 {
+				compatible = "fsl,imx8mp-hdmi-hpd";
+				reg = <0x32fdb000 0x1000>;
+				power-domains = <&hdmi_phy_pd>;
+				status = "disabled";
 			};
 
 			hdmiphy: hdmiphy@32fdff00 {
