--- a/configs/nitrogen8mp_4g_defconfig
+++ b/configs/nitrogen8mp_4g_defconfig
@@ -168,6 +168,7 @@ CONFIG_VIDEO_LT8912=y
 CONFIG_VIDEO_SN65DSI83=y
 CONFIG_VIDEO_IMX_SEC_DSI=y
 CONFIG_VIDEO_IMX_LCDIFV3=y
+CONFIG_VIDEO_IMX8MP_HDMI=y
 CONFIG_VIDEO_IMX8MP_LVDS=y
 CONFIG_SPLASH_SCREEN=y
 CONFIG_SPLASH_SCREEN_ALIGN=y
