--- a/arch/arm/dts/imx8mq-nitrogen8m.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m.dts
@@ -611,6 +611,7 @@
 		pwm_mipi = &pwm3;
 		sound_hdmi = &sound_hdmi;
 		spi_lcd = &spi_lcd;
+		t_hdmi = &t_hdmi;
 		t_mipi = &t_mipi;
 		ts_ft5x06 = &ts_ft5x06;
 		ts_ft7250 = &ts_ft7250;
@@ -896,9 +897,9 @@
 	status = "okay";
 
 	display-timings {
-		native-mode = <&timing1>;
+		native-mode = <&t_hdmi>;
 
-		timing1: timing1 {
+		t_hdmi: t-hdmi-default {
 			clock-frequency = <74250000>;
 			hactive = <1280>;
 			vactive = <720>;
