--- a/arch/arm/dts/imx8mq-nitrogen8m_som.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m_som.dts
@@ -569,6 +569,7 @@
 		mipi_to_lvds = &mipi_to_lvds;
 		pwm_mipi = &pwm3;
 		sound_hdmi = &sound_hdmi;
+		t_hdmi = &t_hdmi;
 		t_mipi = &t_mipi;
 		ts_ft5x06 = &ts_ft5x06;
 		ts_goodix = &ts_goodix;
@@ -886,9 +887,9 @@
 	status = "okay";
 
 	display-timings {
-		native-mode = <&timing1>;
+		native-mode = <&t_hdmi>;
 
-		timing1: timing1 {
+		t_hdmi: t-hdmi-default {
 			clock-frequency = <74250000>;
 			hactive = <1280>;
 			vactive = <720>;
