--- a/arch/arm/dts/imx8mq-son.dts
+++ b/arch/arm/dts/imx8mq-son.dts
@@ -504,6 +504,7 @@
 		mipi_to_lvds = &mipi_to_lvds;
 		pwm_mipi = &pwm1;
 		sound_hdmi = &sound_hdmi;
+		t_hdmi = &t_hdmi;
 		t_mipi = &t_mipi;
 	};
 
@@ -961,9 +962,9 @@
 	status = "okay";
 
 	display-timings {
-		native-mode = <&timing1>;
+		native-mode = <&t_hdmi>;
 
-		timing1: timing1 {
+		t_hdmi: t-hdmi-default {
 			clock-frequency = <74250000>;
 			hactive = <1280>;
 			vactive = <720>;
