--- a/arch/arm/dts/imx8mmn-nitrogen8mm.dtsi
+++ b/arch/arm/dts/imx8mmn-nitrogen8mm.dtsi
@@ -5,6 +5,8 @@
 #ifndef TOUCHSCREEN_I2C_BUS
 #define TOUCHSCREEN_I2C_BUS	i2c2
 #endif
+
+#ifndef SKIP_MIPI_PANELS
 #ifndef TC358867_I2C_BUS
 #define TC358867_I2C_BUS	<&TOUCHSCREEN_I2C_BUS>
 #endif
@@ -21,6 +23,7 @@
 #include "panel-m101nwwb.dtsi"
 #include "panel-com50h5n03ulc.dtsi"
 #include "panel-zwt055azh.dtsi"
+#endif
 
 &iomuxc {
 	pinctrl-names = "default";
@@ -255,6 +258,7 @@
 		>;
 	};
 
+#ifndef SKIP_MIPI_PANELS
 	pinctrl_mipi_com50h5n03ulc: mipi-com50h5n03ulcgrp {
 		fsl,pins = <
 #define GP_MIPI_RESET	<&gpio1 9 GPIO_ACTIVE_LOW>
@@ -305,6 +309,7 @@
 			MX8MMN(IOMUXC_GPIO1_IO09_GPIO1_IO9, 0x16)
 		>;
 	};
+#endif
 
 	pinctrl_pwm1: pwm1grp {
 		fsl,pins = <
@@ -566,6 +571,7 @@
 
 	aliases {
 		a53 = &A53_0;
+#ifndef SKIP_MIPI_PANELS
 		backlight_mipi = &backlight_mipi;
 		fb_mipi = &fb_mipi;
 		lcdif = &lcdif;
@@ -575,7 +581,9 @@
 		pca9540 = &pca9540;
 		pca9546 = &pca9546;
 		pwm_mipi = &pwm3;
+#endif
 		reg_sw4 = &reg_sw4;
+#ifndef SKIP_MIPI_PANELS
 		spi_lcd = &spi_lcd;
 		t_mipi = &t_mipi;
 		ts_ft5x06 = &ts_ft5x06;
@@ -584,8 +592,10 @@
 		ts_gsl1680 = &ts_gsl1680;
 		ts_ili251x = &ts_ili251x;
 		ts_st1633i = &ts_st1633i;
+#endif
 	};
 
+#ifndef SKIP_MIPI_PANELS
 	backlight_mipi: backlight-mipi {
 		brightness-levels = <0 1 2 3 4 5 6 7 8 9 10>;
 		compatible = "pwm-backlight";
@@ -594,6 +604,7 @@
 		pwms = <&pwm3 0 30000>;		/* 33.3 Khz */
 		status = "okay";
 	};
+#endif
 
 #if 0
 	bt-rfkill {
@@ -850,6 +861,7 @@
 };
 
 
+#ifndef SKIP_MIPI_PANELS
 &TOUCHSCREEN_I2C_BUS {
 	mipi_to_lvds: mipi-to-lvds@2c {
 		alias = <&mipi_to_lvds>;
@@ -1076,6 +1088,7 @@
 		};
 	};
 };
+#endif
 
 &i2c3 {
 	clock-frequency = <100000>;
@@ -1155,10 +1168,12 @@
 	status = "okay";
 };
 
+#ifndef SKIP_MIPI_PANELS
 &lcdif {
 	display = <&fb_mipi>;
 	status = "okay";
 };
+#endif
 
 #if 0
 &mipi_csi_1 {
@@ -1181,6 +1196,7 @@
 };
 #endif
 
+#ifndef SKIP_MIPI_PANELS
 &mipi_dsi {
 	assigned-clocks = <&clk IMX8MMN(CLK_DSI_CORE)>,
 			  <&clk IMX8MMN(CLK_DSI_PHY_REF)>,
@@ -1293,6 +1309,7 @@
 		};
 	};
 };
+#endif
 
 &mu {
 	status = "okay";
