nitrogen8mm_som: imx8mm-nitrogen8mm_som.dts use SKIP_MIPI_PANELS
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
+++ b/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
@@ -202,6 +202,7 @@
 #endif
 };
 
+#ifndef SKIP_MIPI_PANELS
 &lt8912_2 {
 	reset-gpios = GP_LT8912_2_RESET;
 };
@@ -209,6 +210,7 @@
 &mipi_to_lvds {
 	enable-gpios = GP_SN65DSI83_EN;
 };
+#endif
 
 #if 0
 &reg_sw4 {
@@ -216,9 +218,11 @@
 };
 #endif
 
+#ifndef SKIP_MIPI_PANELS
 &spi_lcd {
 	reset-gpios = GP_SC18IS602B_RESET;
 };
+#endif
 
 &usbotg2 {
 	disable-over-current;
