--- a/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
+++ b/arch/arm/dts/imx8mm-nitrogen8mm_som.dts
@@ -123,7 +123,7 @@
 	pinctrl_usbotg2: usbotg2grp {
 		fsl,pins = <
 			MX8MMN(IOMUXC_GPIO1_IO14_USB2_OTG_PWR, 0x16)
-			MX8MMN(IOMUXC_GPIO1_IO08_GPIO1_IO8, 0x16)
+			MX8MMN(IOMUXC_GPIO1_IO08_GPIO1_IO8, 0x140)
 		>;
 	};
 };
@@ -181,16 +181,16 @@
 		DOVDD-supply = <&reg_vref_1v8>;
 		DVDD-supply = <&reg_vref_3v3>;
 		clocks = <&mipi_xclk>;
-		clock-names = "csi_mclk";
+		clock-names = "xclk";
 		compatible = "ovti,ov5640_mipisubdev";
 		csi_id = <0>;
 		mclk = <20000000>;
 		mipi_csi;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c3_ov5640_mipi>;
-		pwn-gpios = GP_OV5640_MIPI_POWER_DOWN;
+		powerdown-gpios = GP_OV5640_MIPI_POWER_DOWN;
 		reg = <0x3c>;
-		rst-gpios = GP_OV5640_MIPI_RESET;
+		reset-gpios = GP_OV5640_MIPI_RESET;
 		status = "okay";
 
 		port {
