--- a/configs/nitrogen8mp_2g_defconfig
+++ b/configs/nitrogen8mp_2g_defconfig
@@ -162,6 +162,7 @@ CONFIG_USB_ETHER_ASIX=y
 CONFIG_USB_ETHER_MCS7830=y
 CONFIG_USB_ETHER_SMSC95XX=y
 CONFIG_DM_VIDEO=y
+CONFIG_BACKLIGHT_BD2606=y
 CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_PANEL_MIPI_SIMPLE=y
 CONFIG_VIDEO_LT8912=y
