gitattributes: make .img, .fw and .bin files binary
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

squash

Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 # Denote all files that are truly binary and should not be modified
 *.bmp binary
 *.ttf binary
+*.fw binary
+*.bin binary
+*.img binary
