--- a/board/boundary/a311d/a311d.dts
+++ b/board/boundary/a311d/a311d.dts
@@ -17,9 +17,12 @@
 	model = "Boundary Devices A311D";
 
 	aliases {
-		serial0 = &uart_AO;
 		ethernet0 = &ethmac;
+		i2c0 = &i2c_AO;
+		i2c1 = &i2c2;
+		i2c2 = &i2c3;
 		rtc1 = &vrtc;
+		serial0 = &uart_AO;
 	};
 
 	chosen {
@@ -351,26 +354,26 @@
 		reset-gpios = <&gpio_ao GPIOAO_10 GPIO_ACTIVE_LOW>;
 		status = "okay";
 
-		i2c1a: i2c@0 {
+		i2c_A0_a: i2c@0 {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			clock-frequency = <400000>;
 			reg = <0>;
 		};
 
-		i2c1b: i2c@1 {
+		i2c_A0_b: i2c@1 {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <1>;
 		};
 
-		i2c1c: i2c@2 {
+		i2c_A0_c: i2c@2 {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <2>;
 		};
 
-		i2c1d: i2c@3 {
+		i2c_A0_d: i2c@3 {
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <3>;
@@ -378,7 +381,7 @@
 	};
 };
 
-&i2c1a {
+&i2c_A0_a {
 	vddcpu_a: regulator-vddcpu-a@42 {
 		/* TPS628660AYCG Regulator */
 		compatible = "ti,tps628660";
@@ -391,7 +394,20 @@
 	};
 };
 
-&i2c1c {
+&i2c_A0_b {
+	vdd_ee: regulator-vddcpu-b@60 {
+		/* fan5355 Regulator */
+		compatible = "ti,fan5355";
+		reg = <0x60>;
+		regulator-name = "VDD_EE";
+		regulator-min-microvolt = <690000>;
+		regulator-max-microvolt = <1050000>;
+		regulator-boot-on;
+		regulator-always-on;
+	};
+};
+
+&i2c_A0_c {
 	vddcpu_b: regulator-vddcpu-b@60 {
 		/* fan5355 Regulator */
 		compatible = "ti,fan5355";
@@ -401,6 +417,90 @@
 		regulator-max-microvolt = <1050000>;
 		regulator-boot-on;
 		regulator-always-on;
+	};
+};
+
+&i2c_A0_d {
+	/* camera connector */
+};
+
+&i2c2 {
+	clock-frequency = <100000>;
+	status = "okay";
+	pinctrl-0 = <&i2c2_sck_x_pins>, <&i2c2_sda_x_pins>;
+	pinctrl-names = "default";
+
+	i2cmux9546@70 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		compatible = "nxp,pca9546";
+		reg = <0x70>;
+		reset-gpios = <&gpio GPIOA_12 GPIO_ACTIVE_LOW>;
+		status = "okay";
+
+		i2c2_a: i2c@0 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0>;
+		};
+
+		i2c2_b: i2c@1 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <1>;
+		};
+
+		i2c2_c: i2c@2 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <2>;
+		};
+
+		i2c2_d: i2c@3 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <3>;
+		};
+	};
+};
+
+&i2c2_a {
+	/* TypeC chip */
+};
+
+&i2c2_b {
+	/* unused */
+};
+
+&i2c2_c {
+	/* RTC */
+	rtc@52 {
+		backup-switchover-dsm;
+		compatible = "microcrystal,rv3028";
+		interrupts-extended = <&gpio_intc 5 IRQ_TYPE_LEVEL_LOW>;
+		reg = <0x52>;
+		wakeup-source;
+	};
+};
+
+&i2c2_d {
+	/* DSI touch controller */
+};
+
+/* i2c Audio */
+&i2c3 {
+	clock-frequency = <100000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c3_sda_a_pins>, <&i2c3_sck_a_pins>;
+	status = "okay";
+
+	wm8960: codec@1a {
+		compatible = "wlf,wm8960";
+		reg = <0x1a>;
+		clocks = <&clkc_audio AUD_CLKID_MST_B_MCLK>;
+		clock-names = "mclk1";
+		wlf,shared-lrclk;
+		#sound-dai-cells = <0>;
 	};
 };
 
