boundary: common: only default y to FEC_RESET_PULLUP if PHY_ATHEROS is used
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -43,9 +43,9 @@ config BQ25898
 
 config FEC_RESET_PULLUP
 	bool "fec pullup on reset"
-	default y if IMX8MP
-	default y if IMX8MM
-	default y if IMX8MN
+	default y if IMX8MP && PHY_ATHEROS
+	default y if IMX8MM && PHY_ATHEROS
+	default y if IMX8MN && PHY_ATHEROS
 	default y if TARGET_NITROGEN7
 
 config OTG_CHARGER
