a311d_defconfig: add env in emmc boot partition
Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/board/boundary/a311d/a311d_defconfig
+++ b/board/boundary/a311d/a311d_defconfig
@@ -6,6 +6,7 @@ CONFIG_ARCH_MESON=y
 CONFIG_SYS_TEXT_BASE=0x01000000
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x200000
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="a311d"
 CONFIG_MESON_G12A=y
@@ -38,10 +39,10 @@ CONFIG_CMD_BMP=y
 CONFIG_CMD_REGULATOR=y
 CONFIG_CMD_KHADAS_KBI=y
 CONFIG_OF_CONTROL=y
-CONFIG_ENV_IS_NOWHERE=y
-CONFIG_ENV_IS_IN_FAT=y
-CONFIG_ENV_FAT_DEVICE_AND_PART="2"
+CONFIG_ENV_IS_IN_MMC=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
+CONFIG_SYS_MMC_ENV_DEV=1
+CONFIG_SYS_MMC_ENV_PART=1
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_SARADC_MESON=y
 CONFIG_BUTTON=y
