--- a/configs/ds_4g_defconfig
+++ b/configs/ds_4g_defconfig
@@ -92,6 +92,8 @@ CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_MXC_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_MXC=y
+CONFIG_I2C_MUX=y
+CONFIG_I2C_MUX_PCA954x=y
 CONFIG_DM_MMC=y
 CONFIG_SUPPORT_EMMC_BOOT=y
 CONFIG_MMC_HS200_SUPPORT=y
