--- a/configs/tc_512m_defconfig
+++ b/configs/tc_512m_defconfig
@@ -5,6 +5,7 @@ CONFIG_NR_DRAM_BANKS=1
 CONFIG_ENV_SIZE=0x2000
 CONFIG_ENV_OFFSET=0xc0000
 CONFIG_ENV_SECT_SIZE=0x2000
+# CONFIG_SPLASH_SCREEN_PREPARE is not set
 CONFIG_MX6ULL=y
 CONFIG_BOUNDARY_BOARD_IMX6=y
 CONFIG_TARGET_TC=y
@@ -38,6 +39,7 @@ CONFIG_CMD_USB_MASS_STORAGE=y
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_MII=y
 CONFIG_CMD_PING=y
+CONFIG_CMD_BMP=y
 CONFIG_CMD_CACHE=y
 CONFIG_CMD_TIME=y
 CONFIG_CMD_EXT2=y
@@ -84,4 +86,6 @@ CONFIG_USB_ETHER_ASIX=y
 CONFIG_USB_ETHER_MCS7830=y
 CONFIG_USB_ETHER_SMSC95XX=y
 CONFIG_VIDEO=y
+CONFIG_SPLASH_SCREEN=y
+CONFIG_SPLASH_SCREEN_ALIGN=y
 CONFIG_OF_LIBFDT=y
