dts: imx8mq-nitrogen8m: add mipi_clk to panel,simple to support S_LPTXTIME
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mq-nitrogen8m.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m.dts
@@ -1460,6 +1460,8 @@
 #endif
 		bus-format = "rgb888";
 		bus-width = <24>;
+		clocks = <&dsim_clk 0>;
+		clock-names = "mipi_clk";
 		compatible = "panel,simple";
 		delay-power-up = <2>;
 		dsi-format = "rgb888";
