video: rename panel-simple to panel-common
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -206,7 +206,7 @@ config PANEL
 	help
 	  This provides panel uclass driver that enables basic panel support.
 
-config PANEL_MIPI_SIMPLE
+config PANEL_MIPI_COMMON
 	bool "Enable simple mipi panel support"
 	depends on PANEL
 	help
