ash8mm: make mipi_to_lvds part of fb_mipi (panel,common)
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mm-ash8mm.dts
+++ b/arch/arm/dts/imx8mm-ash8mm.dts
@@ -993,7 +993,7 @@
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
 		bus-width = <24>;
-		compatible = "panel,simple";
+		compatible = "panel,common";
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
 		mode-skip-eot;
