--- a/arch/arm/dts/imx8mm-c2.dts
+++ b/arch/arm/dts/imx8mm-c2.dts
@@ -828,29 +828,6 @@
 };
 
 &i2c3a {
-	mipi_to_lvds: mipi-to-lvds@2c {
-		alias = <&mipi_to_lvds>;
-		clocks = <&dsim_clk 0>,
-			<&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
-		clock-names = "mipi_clk", "pixel_clock";
-		compatible = "ti,sn65dsi83";
-		display = <&display_subsystem>;
-		display-dsi = <&fb_mipi>;
-		enable-gpios = GP_SN65DSI83_EN;
-		interrupts-extended = GPIRQ_SN65DSI83;
-		interrupts-gpios = GP_SN65DSI83_IRQ;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_sn65dsi83>;
-		reg = <0x2c>;
-		status = "disabled";
-
-		port@0 {
-			lvds_from_panel: endpoint {
-				remote-endpoint = <&panel_to_lvds>;
-			};
-		};
-	};
-
 	ts_ft5x06: touchscreen@38 {
 		compatible = "edt,ft5x06-ts";
 		interrupts-extended = GPIRQ_TS_FT5X06;
@@ -1105,7 +1082,10 @@
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
 		bus-width = <24>;
-		compatible = "panel,simple";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+		clock-names = "mipi_clk", "pixel_clock";
+		compatible = "panel,common";
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
 		mode-skip-eot;
@@ -1113,8 +1093,11 @@
 		mode-video-burst;
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
+		pinctrl-names = "sn65dsi83";
+		pinctrl-0 = <&pinctrl_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
+		sn65dsi83 = <&mipi_to_lvds>;
 		spwg;
 
 		display-timings {
@@ -1135,15 +1118,19 @@
 			};
 		};
 
+		mipi_to_lvds: mipi-to-lvds {
+			alias = <&mipi_to_lvds>;
+			enable-gpios = GP_SN65DSI83_EN;
+			i2c-address = <0x2c>;
+			i2c-bus = <&i2c3a>;
+			interrupts-extended = GPIRQ_SN65DSI83;
+			interrupts-gpios = GP_SN65DSI83_IRQ;
+			status = "disabled";
+		};
+
 		port@1 {
 			panel_from_dsim: endpoint {
 				remote-endpoint = <&dsim_to_panel>;
-			};
-		};
-
-		port@2 {
-			panel_to_lvds: endpoint {
-				remote-endpoint = <&lvds_from_panel>;
 			};
 		};
 	};
