--- a/arch/arm/dts/imx8mm-hl8mm.dts
+++ b/arch/arm/dts/imx8mm-hl8mm.dts
@@ -820,7 +820,7 @@
 		bits-per-color = <8>;
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
-		compatible = "panel,simple";
+		compatible = "panel,common";
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
 		mode-skip-eot;
