--- a/arch/arm/dts/imx8mq-nitrogen8m.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m.dts
@@ -1109,33 +1109,6 @@
 	sda-gpios = GP_I2C4_SDA;
 	status = "okay";
 
-	mipi_to_lvds: mipi-to-lvds@2c {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		alias = <&mipi_to_lvds>;
-		clocks = <&dsim_clk 0>,
-			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
-		clock-names = "mipi_clk", "pixel_clock";
-		compatible = "ti,sn65dsi83";
-		display = <&lcdif>;
-		display-dsi = <&fb_mipi>;
-		enable-gpios = GP_I2C4_SN65DSI83_EN;
-		interrupts-extended = GPIRQ_I2C4_SN65DSI83;
-		interrupts-gpios = GP_I2C4_SN65DSI83_IRQ;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_sn65dsi83>;
-		reg = <0x2c>;
-		status = "disabled";
-
-		port@0 {
-			reg = <0>;
-
-			lvds_from_panel: endpoint {
-				remote-endpoint = <&panel_to_lvds>;
-			};
-		};
-	};
-
 	spi_lcd: spi@2f {
 		compatible = "nxp,sc18is602b";
 		pinctrl-names = "default";
@@ -1460,9 +1433,10 @@
 #endif
 		bus-format = "rgb888";
 		bus-width = <24>;
-		clocks = <&dsim_clk 0>;
-		clock-names = "mipi_clk";
-		compatible = "panel,simple";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
+		clock-names = "mipi_clk", "pixel_clock";
+		compatible = "panel,common";
 		delay-power-up = <2>;
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
@@ -1471,8 +1445,11 @@
 		mode-video-burst;
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
+		pinctrl-names = "sn65dsi83";
+		pinctrl-0 = <&pinctrl_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
+		sn65dsi83 = <&mipi_to_lvds>;
 		spwg;
 
 		display-timings {
@@ -1493,6 +1470,18 @@
 			};
 		};
 
+		mipi_to_lvds: mipi-to-lvds {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			alias = <&mipi_to_lvds>;
+			enable-gpios = GP_I2C4_SN65DSI83_EN;
+			i2c-address = <0x2c>;
+			i2c-bus = <&i2c4>;
+			interrupts-extended = GPIRQ_I2C4_SN65DSI83;
+			interrupts-gpios = GP_I2C4_SN65DSI83_IRQ;
+			status = "disabled";
+		};
+
 		port@1 {
 			reg = <1>;
 
@@ -1502,14 +1491,6 @@
 		};
 
 		port@2 {
-			reg = <2>;
-
-			panel_to_lvds: endpoint {
-				remote-endpoint = <&lvds_from_panel>;
-			};
-		};
-
-		port@3 {
 			reg = <3>;
 
 			panel_to_lt8912: endpoint {
@@ -1517,7 +1498,7 @@
 			};
 		};
 
-		port@4 {
+		port@3 {
 			reg = <4>;
 
 			panel_to_lt8912_2: endpoint {
