--- a/arch/arm/dts/imx8mq-nitrogen8m_som.dts
+++ b/arch/arm/dts/imx8mq-nitrogen8m_som.dts
@@ -166,7 +166,7 @@
 		>;
 	};
 
-	pinctrl_i2c1d_sn65dsi83: i2c4-sn65dsi83grp {
+	pinctrl_sn65dsi83: i2c4-sn65dsi83grp {
 		fsl,pins = <
 #define GP_I2C1D_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
 #define GPIRQ_I2C1D_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
@@ -994,33 +994,6 @@
 };
 
 &i2c1d {
-	mipi_to_lvds: mipi-to-lvds@2c {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		alias = <&mipi_to_lvds>;
-		clocks = <&dsim_clk 0>,
-			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
-		clock-names = "mipi_clk", "pixel_clock";
-		compatible = "ti,sn65dsi83";
-		display = <&lcdif>;
-		display-dsi = <&fb_mipi>;
-		enable-gpios = GP_I2C1D_SN65DSI83_EN;
-		interrupts-extended = GPIRQ_I2C1D_SN65DSI83;
-		interrupts-gpios = GP_I2C1D_SN65DSI83_IRQ;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c1d_sn65dsi83>;
-		reg = <0x2c>;
-		status = "disabled";
-
-		port@0 {
-			reg = <0>;
-
-			lvds_from_panel: endpoint {
-				remote-endpoint = <&panel_to_lvds>;
-			};
-		};
-	};
-
 	ts_ft5x06: touchscreen@38 {
 		compatible = "edt,ft5x06-ts";
 		interrupts-extended = GPIRQ_I2C1D_FT5X06;
@@ -1323,7 +1296,10 @@
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
 		bus-width = <24>;
-		compatible = "panel,simple";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
+		clock-names = "mipi_clk", "pixel_clock";
+		compatible = "panel,common";
 		delay-power-up = <2>;
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
@@ -1332,8 +1308,11 @@
 		mode-video-burst;
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
+		pinctrl-names = "sn65dsi83";
+		pinctrl-0 = <&pinctrl_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
+		sn65dsi83 = <&mipi_to_lvds>;
 		spwg;
 
 		display-timings {
@@ -1354,19 +1333,23 @@
 			};
 		};
 
+		mipi_to_lvds: mipi-to-lvds {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			alias = <&mipi_to_lvds>;
+			enable-gpios = GP_I2C1D_SN65DSI83_EN;
+			i2c-address = <0x2c>;
+			i2c-bus = <&i2c1d>;
+			interrupts-extended = GPIRQ_I2C1D_SN65DSI83;
+			interrupts-gpios = GP_I2C1D_SN65DSI83_IRQ;
+			status = "disabled";
+		};
+
 		port@1 {
 			reg = <1>;
 
 			panel1_in: endpoint {
 				remote-endpoint = <&mipi_dsi_bridge_out>;
-			};
-		};
-
-		port@2 {
-			reg = <2>;
-
-			panel_to_lvds: endpoint {
-				remote-endpoint = <&lvds_from_panel>;
 			};
 		};
 	};
