--- a/arch/arm/dts/imx8mq-son.dts
+++ b/arch/arm/dts/imx8mq-son.dts
@@ -197,7 +197,7 @@
 		>;
 	};
 
-	pinctrl_i2c2a_sn65dsi83: i2c2a-sn65dsi83grp {
+	pinctrl_sn65dsi83: sn65dsi83grp {
 		fsl,pins = <
 #define GP_I2C2A_SN65DSI83_IRQ <&gpio3 19 GPIO_ACTIVE_HIGH>
 #define GPIRQ_I2C2A_SN65DSI83	<&gpio3 19 IRQ_TYPE_LEVEL_HIGH>
@@ -1137,32 +1137,6 @@
 };
 
 &i2c2a {
-	mipi_to_lvds: mipi-to-lvds@2c {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		alias = <&mipi_to_lvds>;
-		clocks = <&dsim_clk 0>,
-			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
-		clock-names = "mipi_clk", "pixel_clock";
-		compatible = "ti,sn65dsi83";
-		display = <&lcdif>;
-		display-dsi = <&fb_mipi>;
-		enable-gpios = GP_I2C2A_SN65DSI83_EN;
-		interrupts-extended = GPIRQ_I2C2A_SN65DSI83;
-		interrupts-gpios = GP_I2C2A_SN65DSI83_IRQ;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c2a_sn65dsi83>;
-		reg = <0x2c>;
-		status = "disabled";
-
-		port@0 {
-			reg = <0>;
-
-			lvds_from_panel: endpoint {
-				remote-endpoint = <&panel_to_lvds>;
-			};
-		};
-	};
 };
 
 &i2c2b {
@@ -1297,7 +1271,10 @@
 #endif
 		bus-format = "rgb888";
 		bus-width = <24>;
-		compatible = "panel,simple";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MQ_CLK_LCDIF_PIXEL>;
+		clock-names = "mipi_clk", "pixel_clock";
+		compatible = "panel,common";
 		delay-power-up = <2>;
 		dsi-format = "rgb888";
 		dsi-lanes = <4>;
@@ -1306,8 +1283,11 @@
 		mode-video-burst;
 		panel-height-mm = <136>;
 		panel-width-mm = <217>;
+		pinctrl-names = "sn65dsi83";
+		pinctrl-0 = <&pinctrl_sn65dsi83>;
 		power-supply = <&reg_vref_5v>;
 		reg = <0>;
+		sn65dsi83 = <&mipi_to_lvds>;
 
 		display-timings {
 			t_mipi: t-dsi-default {
@@ -1327,19 +1307,23 @@
 			};
 		};
 
+		mipi_to_lvds: mipi-to-lvds {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			alias = <&mipi_to_lvds>;
+			enable-gpios = GP_I2C2A_SN65DSI83_EN;
+			i2c-address = <0x2c>;
+			i2c-bus = <&i2c2a>;
+			interrupts-extended = GPIRQ_I2C2A_SN65DSI83;
+			interrupts-gpios = GP_I2C2A_SN65DSI83_IRQ;
+			status = "disabled";
+		};
+
 		port@1 {
 			reg = <1>;
 
 			panel1_in: endpoint {
 				remote-endpoint = <&mipi_dsi_bridge_out>;
-			};
-		};
-
-		port@2 {
-			reg = <2>;
-
-			panel_to_lvds: endpoint {
-				remote-endpoint = <&lvds_from_panel>;
 			};
 		};
 	};
