dts: imx8mmn-nitrogen8mm: remove changes now made by imx8mmn-nitrogen8mm-uboot.dtsi
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mmn-nitrogen8mm.dtsi
+++ b/arch/arm/dts/imx8mmn-nitrogen8mm.dtsi
@@ -131,7 +131,6 @@
 
 	pinctrl_sn65dsi83: sn65dsi83grp {
 		fsl,pins = <
-#define GP_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
 #define GPIRQ_SN65DSI83	<&gpio1 1 IRQ_TYPE_LEVEL_HIGH>
 			MX8MMN(IOMUXC_GPIO1_IO01_GPIO1_IO1, 0x04)
 #define GP_SN65DSI83_EN	<&gpio1 9 GPIO_ACTIVE_HIGH>
@@ -611,7 +610,6 @@
 	};
 #endif
 
-#if 0
 	bt-rfkill {
 		compatible = "net,rfkill-gpio";
 		pinctrl-names = "default";
@@ -629,7 +627,6 @@
 		clock-output-names = "csi_mclk";
 		pwms = <&pwm2 0 50>; /* 1 / 50 ns = 20 MHz */
 	};
-#endif
 
 	reg_usdhc2_vqmmc: regulator-usdhc2-vqmmc {
 		compatible = "regulator-gpio";
@@ -704,10 +701,8 @@
 #endif
 
 &fec1 {
-#if 0
 	mdc-gpios = GP_MII_MDC;
 	mdio-gpios = GP_MII_MDIO;
-#endif
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_fec1>;
 #if 0
@@ -989,12 +984,6 @@
 				pinctrl-0 = <&pinctrl_lt8912_2>;
 				reg = <0x48> ;
 				reset-gpios = GP_LT8912_2_RESET;
-
-				port@0 {
-					lt8912_2_from_panel: endpoint {
-						remote-endpoint = <&panel_to_lt8912_2>;
-					};
-				};
 			};
 		};
 	};
@@ -1053,12 +1042,6 @@
 				display-dsi = <&fb_mipi>;
 				reg = <0x48>;
 				reset-gpios = <&max7323 0 GPIO_ACTIVE_LOW>;
-
-				port@0 {
-					lt8912_from_panel: endpoint {
-						remote-endpoint = <&panel_to_lt8912>;
-					};
-				};
 			};
 		};
 
@@ -1134,7 +1117,6 @@
 	};
 };
 
-#if 0
 &i2c3a {
 	rtc@68 {
 		compatible = "microcrystal,rv4162";
@@ -1147,6 +1129,7 @@
 };
 
 &i2c3b {
+#if 0
 	ov5640-mipi1@3c {
 		AVDD-supply = <&reg_vref_2v5>;
 		DOVDD-supply = <&reg_vref_1v8>;
@@ -1170,8 +1153,8 @@
 			};
 		};
 	};
-};
 #endif
+};
 
 &i2c4 {
 	clock-frequency = <100000>;
@@ -1185,7 +1168,6 @@
 
 #ifndef SKIP_MIPI_PANELS
 &lcdif {
-	display = <&fb_mipi>;
 	status = "okay";
 };
 #endif
@@ -1218,7 +1200,8 @@
 			  <&clk IMX8MMN(VIDEO_PLL1_REF_SEL)>,
 			  <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
 	assigned-clock-parents = <&clk IMX8MMN(SYS_PLL1_266M)>,
-				 <&clk IMX8MMN(VIDEO_PLL1_OUT)>;
+				 <&clk IMX8MMN(VIDEO_PLL1_OUT)>,
+				 <&clk IMX8MMN(CLK_24M)>;
 	assigned-clock-rates = <266000000>, <0>, <0>, <66000000>;
 
 	clocks = <&clk IMX8MMN(CLK_DSI_CORE)>,
@@ -1230,11 +1213,9 @@
 	fb_mipi: panel@0 {
 		backlight = <&backlight_mipi>;
 		bits-per-color = <8>;
-		bits-per-pixel = <24>;
 		bridge-de-active = <0>;
 		bus-format = "rgb888";
-		bus-width = <24>;
-		clocks = <&dsim_clk 0>,
+		clocks = <&mipi_dsi 0>,
 			<&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
 		clock-names = "mipi_clk", "pixel_clock";
 		compatible = "panel,common";
@@ -1285,52 +1266,7 @@
 			i2c-address = <0x2c>;
 			i2c-bus = <&TOUCHSCREEN_I2C_BUS>;
 			interrupts-extended = GPIRQ_SN65DSI83;
-			interrupts-gpios = GP_SN65DSI83_IRQ;
 			status = "disabled";
-		};
-
-		port@1 {
-			panel_from_dsim: endpoint {
-				remote-endpoint = <&dsim_to_panel>;
-			};
-		};
-
-		port@2 {
-			panel_to_lt8912: endpoint {
-				remote-endpoint = <&lt8912_from_panel>;
-			};
-		};
-
-		port@3 {
-			panel_to_lt8912_2: endpoint {
-				remote-endpoint = <&lt8912_2_from_panel>;
-			};
-		};
-	};
-
-	dsim_clk: dsim-clk {
-		#clock-cells = <1>;
-		#size-cells = <0>;
-		compatible = "generic,clk";
-		clocks = <&clk IMX8MMN(CLK_DSI_PHY_REF)>;
-		clock-names = "parent";
-		clock-output-names = "dsim-clk";
-		status = "okay";
-	};
-
-	dsi_host: dsi-host {
-		compatible = "samsung,sec-mipi-dsi";
-		clocks = <&dsim_clk 0>,
-			 <&clk IMX8MMN(CLK_DSI_CORE)>,
-			 <&clk IMX8MMN(CLK_DSI_PHY_REF)>,
-			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
-		clock-names = "dsim-clk", "cfg", "pll-ref", "pixel_clock";
-		status = "okay";
-	};
-
-	port@1 {
-		dsim_to_panel: endpoint {
-			remote-endpoint = <&panel_from_dsim>;
 		};
 	};
 };
@@ -1385,9 +1321,12 @@
 	pinctrl-0 = <&pinctrl_sai5>;
 	status = "disabled";
 };
+
+&snvs_pwrkey {
+	status = "okay";
+};
 #endif
 
-#if 0
 &uart1 { /* BT */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
@@ -1396,7 +1335,6 @@
 	uart-has-rtscts;
 	status = "okay";
 };
-#endif
 
 &uart2 { /* console */
 	pinctrl-names = "default";
@@ -1406,7 +1344,6 @@
 	status = "okay";
 };
 
-#if 0
 &uart3 { /* J15 */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
@@ -1423,7 +1360,6 @@
 	assigned-clock-parents = <&clk IMX8MMN(SYS_PLL1_80M)>;
 	status = "okay";
 };
-#endif
 
 &usbotg1 {
 	dr_mode = "otg";
@@ -1435,17 +1371,13 @@
 };
 
 &usdhc1 {
-	cap-mmc-highspeed;
 	bus-width = <8>;
-	mmc-ddr-1_8v;
-	mmc-hs200-1_8v;
 	no-mmc-hs400;
 	non-removable;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>;
-	reset-gpios = GP_EMMC_RESET;
 	status = "okay";
 	vmmc-supply = <&reg_vref_3v3>;
 	vqmmc-1-8-v;
@@ -1454,25 +1386,19 @@
 
 &usdhc2 {
 	bus-width = <4>;
-	cap-sd-highspeed;
 	cd-gpios = GP_USDHC2_CD;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2>;
 	pinctrl-1 = <&pinctrl_usdhc2_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc2_200mhz>;
-	sd-uhs-ddr50;
-	sd-uhs-sdr104;
-	sd-uhs-sdr12;
-	sd-uhs-sdr25;
 	status = "okay";
-#if 1
+#if 0
 	vqmmc-supply = <&reg_usdhc2_vqmmc>;
 #else
 	vqmmc-supply = <&reg_ldo2>;
 #endif
 };
 
-#if 0
 &usdhc3 {
 	bus-width = <4>;
 	keep-power-in-suspend;
@@ -1487,7 +1413,6 @@
 	vmmc-supply = <&reg_wlan_vmmc>;
 	vqmmc-1-8-v;
 };
-#endif
 
 &wdog1 {
 	pinctrl-names = "default", "gpio";
